--- a/presentation/presi.tex
+++ b/presentation/presi.tex
@@ -39,15 +39,14 @@
 
 \begin{frame}
 \frametitle{Inhalt}
- \tableofcontents
+	\tableofcontents
 \end{frame}
-
 
 \section{Mean Shift}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s1_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s1_colored.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s1_black.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s1_colored.png}
 \end{frame}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
@@ -72,17 +71,17 @@
 \section{Beispiele}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s2_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s2_colored.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s2_black.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s2_colored.png}
 \end{frame}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s3_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s3_colored.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s3_black.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s3_colored.png}
 \end{frame}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s4_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{pics/s4_colored.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_black.png}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_colored.png}
 \end{frame}
 \end{document}
