--- a/readme
+++ b/readme
@@ -1,11 +1,31 @@
 #run serial version with:
-time serial/build/meanshift.elf data/s1.txt 100000 > ../output
+time serial/build/meanshift.elf data/s1.txt 100000 > ../out
 #run mpi version with:
-time mpirun -n 4 build/meanshift.elf data/s1.txt 100000 > ../output
+time mpirun -n 4 mpi/build/meanshift.elf data/s1.txt 100000 > out
 #generate image:
-gnuplot -e "plot \"< paste data/s1.txt output\" u 1:2:3 with points title \"\" lc var;" -p
+gnuplot -e "plot \"< paste data/s1.txt out\" u 1:2:3 with points title \"\" lc var;" -p
 #while computing the output you can view the results with:
-gnuplot -e "plot \"< paste data/s1.txt output\" u 1:2:3 with points title \"\" lc var;" -p loop.plt
+gnuplot -e "plot \"< paste data/s1.txt out\" u 1:2:3 with points title \"\" lc var;" -p loop.plt
+
+#kernel sizes for test data(http://cs.joensuu.fi/~isido/clustering/):
+#s1: 100000
+#s2: 100000
+#s3: 80000
+#s4: 80000
+#birch1: 100000
 
 #on the headnore:
-screen -dm `/shared/tools/openmpi/1.8.4/bin/mpirun -n 6 --hostfile /shared/mpi_hosts mpi/build/meanshift.elf data/s1.txt 100000 > output`
+screen -dm `/shared/tools/openmpi/1.8.4/bin/mpirun -n 6 --hostfile /shared/mpi_hosts mpi/build/meanshift.elf data/s1.txt 100000 > out`
+
+#----------------------------------
+#on taurus:
+#run serial version with:
+sbatch serial.job
+##run mpi version with:
+sbatch mpi.job
+
+##view status with:
+sacct -o JobName,MaxRSS,MaxVMSize,CPUTime,ConsumedEnergy,State --name meanshift
+#or 
+squeue --name meanshift
+
