--- a/presentation/presi.tex
+++ b/presentation/presi.tex
@@ -22,9 +22,9 @@
 \input{theme/theme}
 
 \title{Linux Cluster in Theorie und Praxis}
-\subtitle{Insert your title here}
+\subtitle{MeanShift - parameterfreier Clusteringalgorithmus}
 \author{Christian Deussen}
-\date{10. Februar 2015}
+\date{4. M\"arz 2015}
 \institute[ZIH TUD]{Zentrum f\"ur Informationsdienste und Hochleistungsrechnen -- TU Dresden}
 %\room{INF 1046}
 \address{N\"othnitzer Stra{\ss}e 46}
@@ -60,14 +60,6 @@
 	\end{itemize}
 \end{frame}
 
-\section{Benchmarks}
-\begin{frame}
-	\frametitle{Cluster Benchmark}
-	\begin{itemize}
-		\item Insert your content
-	\end{itemize}
-\end{frame}
-
 \section{Beispiele}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
@@ -83,5 +75,16 @@
 	\frametitle{Einf\"uhrung}
 	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_black.png}
 	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_colored.png}
+\end{frame}
+
+\section{Benchmarks}
+\begin{frame}
+	\frametitle{Cluster Benchmark}
+	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/benchmark.png}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Cluster Benchmark}
+	\includegraphics[scale=0.25, keepaspectratio]{../output/pics/speedup.png}
 \end{frame}
 \end{document}
