--- a/presentation/presi.tex
+++ b/presentation/presi.tex
@@ -62,25 +62,29 @@
 
 \section{Beispiele}
 \begin{frame}
-	\frametitle{Einf\"uhrung}
+	\frametitle{Beispiele}
 	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s2_black.png}
 	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s2_colored.png}
 \end{frame}
 \begin{frame}
-	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s3_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s3_colored.png}
+	\frametitle{}
+	\includegraphics[scale=0.25, keepaspectratio]{../output/pics/sine.png}
 \end{frame}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_black.png}
-	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/s4_colored.png}
+	\includegraphics[scale=0.15, keepaspectratio]{../output/pics/s3_black.png}
+	\includegraphics[scale=0.13, keepaspectratio]{../output/pics/s3_colored.png}
+\end{frame}
+\begin{frame}
+	\frametitle{Einf\"uhrung}
+	\includegraphics[scale=0.12, keepaspectratio]{../output/pics/s4_black.png}
+	\includegraphics[scale=0.12, keepaspectratio]{../output/pics/s4_colored.png}
 \end{frame}
 
 \section{Benchmarks}
 \begin{frame}
 	\frametitle{Cluster Benchmark}
-	\includegraphics[scale=0.34, keepaspectratio]{../output/pics/benchmark.png}
+	\includegraphics[scale=0.25, keepaspectratio]{../output/pics/benchmark.png}
 \end{frame}
 
 \begin{frame}
