--- a/presentation/presi.tex
+++ b/presentation/presi.tex
@@ -71,14 +71,19 @@
 	\includegraphics[scale=0.25, keepaspectratio]{../output/pics/sine.png}
 \end{frame}
 \begin{frame}
-	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.15, keepaspectratio]{../output/pics/s3_black.png}
-	\includegraphics[scale=0.13, keepaspectratio]{../output/pics/s3_colored.png}
+	\frametitle{}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/birch3_black.png}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/birch3_colored.png}
 \end{frame}
 \begin{frame}
 	\frametitle{Einf\"uhrung}
-	\includegraphics[scale=0.12, keepaspectratio]{../output/pics/s4_black.png}
-	\includegraphics[scale=0.12, keepaspectratio]{../output/pics/s4_colored.png}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/s3_black.png}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/s3_colored.png}
+\end{frame}
+\begin{frame}
+	\frametitle{Einf\"uhrung}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/s4_black.png}
+	\includegraphics[scale=0.22, keepaspectratio]{../output/pics/s4_colored.png}
 \end{frame}
 
 \section{Benchmarks}
