--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ time serial/build/meanshift.elf data/s1.txt 100000 > ../out
 #run mpi version with:
 time mpirun -n 4 mpi/build/meanshift.elf data/s1.txt 100000 > out
 #generate image:
-gnuplot -e "plot \"< paste data/s1.txt out\" u 1:2:3 with points title \"\" lc var;" -p
+gnuplot -e "set terminal png size 1000,1000; plot \"< paste data/s1.txt out\" u 1:2:3 with points title \"\" lc var;" -p > png
 #while computing the output you can view the results with:
 gnuplot -e "plot \"< paste data/s1.txt out\" u 1:2:3 with points title \"\" lc var;" -p loop.plt
 
